--- a/ReachUpWebAPI/ReachUpWebAPI.csproj
+++ b/ReachUpWebAPI/ReachUpWebAPI.csproj
@@ -7,8 +7,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
@@ -19,7 +21,6 @@
   <ItemGroup>
     <Folder Include="App_Data\img\characters\" />
     <Folder Include="App_Data\img\stores\" />
-    <Folder Include="App_Data\json\map\" />
   </ItemGroup>
 
 
