--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^3.0.8
   mobx: ^0.4.0
   flutter_mobx: ^0.3.4
   provider: ^4.0.1
@@ -30,7 +31,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3 
-  
+  http: ^0.12.0+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
