--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_mobx: ^0.3.4
   provider: ^4.0.1
   font_awesome_flutter: ^8.8.1
+  sqflite:
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
