--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.3.1
+  mobx_codegen: ^0.3.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
