--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   sqflite:
   path:
+  flame: ^0.26.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
