--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   flutter_beacon: ^0.3.0
   sembast: ^1.15.1
   flutter_bloc: ^0.9.1
-  equatable: ^0.2.3
-  path_provider: ^0.5.0+1
+
+  localstorage: ^2.0.0
+  path_provider: ^1.1.0 
+
   path:
   flame: ^0.26.0
 
