--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   sembast: ^1.15.1
   flutter_bloc: ^0.9.1
   path_provider:
-
+  # zoomable_image: ^1.3.1
+  photo_view: 0.4.2  
+  flutter_image_compress: 0.6.3
   path:
   flame: ^0.26.0
 
@@ -53,8 +55,8 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - assets/images/floor0.jpg
-   
+    - assets/images/map/floor0.jpg
+    - assets/images/map/floor1.jpg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
