--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ReachUp
-description: A new Flutter project.
+description: Mobile application for indoor location, provides blind and visually impaired an interaction experience in the mall, using voice tools the users can search by stores, bathrooms, restaurants and so on. Besides that, the application offers tools for shopkeepers publish their promotions or communicated and mall managers receive a user visit reports by the mall.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -37,6 +37,8 @@ dependencies:
   flutter_image_compress: 0.6.3
   path:
   flame: ^0.26.0
+  flutter_tts: ^0.8.6
+  sensors: ^0.4.2+5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
