--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   flutter_beacon: ^0.3.0
   sembast: ^1.15.1
-  flutter_bloc: ^0.9.1
   path_provider:
   # zoomable_image: ^1.3.1
   photo_view: 0.4.2  
@@ -39,6 +38,7 @@ dependencies:
   flame: ^0.26.0
   flutter_tts: ^0.8.6
   sensors: ^0.4.2+5
+  flutter_compass: ^0.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
