--- a/MapMaker/package.json
+++ b/MapMaker/package.json
@@ -1,23 +1,22 @@
 {
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
-  "scripts": {
-    "test": "jest"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "fs": "0.0.1-security"
-  },
-  "name": "MapMaker",
-  "version": "1.0.0",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
-  "devDependencies": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+   "name" : "package.json",
+   "version" : "1.0.0",
+   "description": "null",
+   "main" : "server.js",
+   "scripts": {
+     "babel" : "babel --presets es2015 server.js -o build/main.bundle.js",
+     "start": "server.js"
+   },
+
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+     "@types/express": "^4.17.8",
+     "express": "^4.17.1",
+     "typescript": "^4.0.3"
+    },
+
+    "devDependencies": {
+      "@babel/preset-typescript" : "^7.10.4"
+    }
 }
