--- a/MapMaker/package.json
+++ b/MapMaker/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0"
   }
 }
