--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,4 @@
           directory: ./
           badge: ./output/badge.svg
           patterns: '*.js'  # Patterns in the format of a '.gitignore' file, separated by pipes.
-          ignore: 'node_modules'
+          ignore: '/node_modules'
