--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,25 @@
-- name: Lines of Code Badge
-  uses: shadowmoose/GHA-LoC-Badge@1.0.0
-  id: badge
+
+on: [push]
+name: Run Test
+
+jobs:
+  hello_world_job:
+    runs-on: ubuntu-latest
+    name: Test Run
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Launch the local action
+        uses: ./ # Uses an action in the root directory
+        id: badge
         with:
           debug: true
           directory: ./
           badge: ./output/badge.svg
-          patterns: '*.js'  # Patterns in the format of a '.gitignore' file, separated by pipes.
-          ignore: '/node_modules'
+          ignore: 'node_modules/|README'
+
+      - name: Print the output
+        run: |
+          echo "Scanned: ${{ steps.badge.outputs.counted_files }}";
+          echo "Line Count: ${{ steps.badge.outputs.total_lines }}";
