--- a/ReachUpApp/ReachUp/pubspec.yaml
+++ b/ReachUpApp/ReachUp/pubspec.yaml
@@ -45,12 +45,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3 
   http: ^0.12.0+2
+  giffy_dialog:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.3.1
   mobx_codegen: ^0.3.11
+  flutter_launcher_icons: ^0.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,9 +64,11 @@ flutter:
     - assets/images/map/floor1.jpg
     - assets/animations/pin.json
     - assets/animations/pin-pointer.json
+    - assets/animations/search.json
     - assets/animations/user-location.json
     - assets/images/icons/user-location.png
-    
+    - assets/map/map.json
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
