Fixing gitignore bug's and merge Database/LibraryClasses/WebAPI

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -14,10 +14,10 @@
   },
 
   "EmailConfiguration": {
-    "From": "csoft.company@gmail.com",
+    "From": "CSoft Inc",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "CSoft Inc",
-    "Password": "our test password"
+    "Username": "csoft.company@gmail.com",
+    "Password":  "colocar senha que está no env"
   }
 }
