Refactoring | Kestrel Server and Smtp services

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,5 @@
 {
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -18,6 +19,16 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "csoft.company@gmail.com",
-    "Password":  "colocar senha que está no env"
+    "Password": "Pegar a senha no .env"
+  },
+  
+  "Kestrel": {
+    "Limits": {
+      "MaxConcurrentConnections": 100,
+      "MaxConcurrentUpgradedConnections": 100
+    },
+    "DisableStringReuse": true
   }
+
+
 }
