Downloading images and icons working (local and category); and other changes

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -20,6 +20,14 @@
       "MaxConcurrentUpgradedConnections": 100
     },
     "DisableStringReuse": true
+  },
+
+  "EmailConfiguration": {
+     "From": "CSoft Inc",
+     "SmtpServer": "smtp.gmail.com",
+     "Port": 465,
+     "Username" : "csoft.company@gmail.com",
+     "Password": "null"
   }
 
 
