--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -54,7 +54,7 @@ dev_dependencies:
   build_runner: ^1.3.1
   mobx_codegen: ^0.3.11
   flutter_launcher_icons: ^0.7.0
-
+  cached_network_image: ^2.3.3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
