--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -1,20 +1,8 @@
 name: ReachUp
 description: Mobile application for indoor location, provides blind and visually impaired an interaction experience in the mall, using voice tools the users can search by stores, bathrooms, restaurants and so on. Besides that, the application offers tools for shopkeepers publish their promotions or communicated and mall managers receive a user visit reports by the mall.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' 
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -29,37 +17,36 @@ dependencies:
   provider: ^4.0.1
   font_awesome_flutter: ^8.8.1
   flutter_beacon: ^0.3.0
-  #sembast: ^1.15.1
+
   path_provider:
   photo_view: 0.4.2  
   flutter_image_compress: 0.6.3
   path:
-  #flame: ^0.26.0
+
   flutter_tts: ^0.8.6
   sensors: ^0.4.2+5
   flutter_compass: ^0.4.3
   gesture_x_detector: ^0.0.4
-  #fluttie: ^0.3.0
+
   lottie: ^0.6.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^0.1.3 
   http: ^0.12.0+2
   giffy_dialog:
   flutter_signin_button: ^1.1.0
   fa_stepper: ^0.0.2
   async: ^2.4.2
+  flutter_easyloading: ^2.1.3
+  cached_network_image: ^2.3.3
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.3.1
   mobx_codegen: ^0.3.11
   flutter_launcher_icons: ^0.7.0
-  cached_network_image: ^2.3.3
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
+ 
 flutter:
   assets:
     #Animations
@@ -71,7 +58,8 @@ flutter:
     #Images
     - assets/images/map/floor0.jpg
     - assets/images/map/floor1.jpg
-    
+    - assets/images/bkg/bkg_initial_screen.jpg
+
     - assets/images/icons/widgets/user-location.png
     - assets/images/icons/launch/ReachUp.png
 
@@ -79,38 +67,5 @@ flutter:
     - assets/config/global/config-global.json
     - assets/map/map.json
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
