--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   async: ^2.4.2
   flutter_easyloading: ^2.1.3
   cached_network_image: ^2.3.3
-
+  flutter_circular_chart: ^0.1.0
 
 dev_dependencies:
   flutter_test:
