--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   flutter_easyloading: ^2.1.3
   cached_network_image: ^2.3.3
   flutter_circular_chart: ^0.1.0
-
+  intl: ^0.16.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
