--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.16.1
   flutter_rating_bar: ^3.2.0+1
   toggle_switch: ^0.1.8
+  flutter_slidable: ^0.5.7
+  get_storage: ^1.3.2
   get:
   
 dev_dependencies:
