--- a/src/MobileApp/pubspec.yaml
+++ b/src/MobileApp/pubspec.yaml
@@ -6,53 +6,58 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.12.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^3.0.8
-  mobx: ^0.4.0
-  flutter_mobx: ^0.3.4
-  provider: ^4.0.1
-  font_awesome_flutter: ^8.8.1
-  flutter_beacon: ^0.3.0
+  dio: ^5.3.3
+  mobx: ^2.2.0
+  flutter_mobx: ^2.1.0
+  provider: ^6.0.0
+  font_awesome_flutter: ^9.0.0
+  flutter_beacon: ^0.5.1
 
   path_provider:
-  photo_view: 0.4.2  
-  flutter_image_compress: 0.6.3
+  photo_view: 0.14.0
+  flutter_image_compress: ^2.1.0
   path:
 
-  flutter_tts: ^0.8.6
-  sensors: ^0.4.2+5
-  flutter_compass: ^0.4.3
-  gesture_x_detector: ^0.0.4
+  flutter_tts: ^3.8.3
+  ## Dart 3 incompatible
+  #sensors: ^0.4.2+5
+  sensors_plus: ^3.1.0
+  flutter_compass: ^0.8.0
+  gesture_x_detector: 1.1.1
 
-  lottie: ^0.6.0
+  lottie: ^2.7.0
 
-  cupertino_icons: ^0.1.3 
-  http: ^0.12.0+2
+  cupertino_icons: 1.0.6
+  http: ^1.1.0
   giffy_dialog:
-  flutter_signin_button: ^1.1.0
-  fa_stepper: ^0.0.2
+  flutter_signin_button: 2.0.0
+  ## Dart 3 incompatible
+  #fa_stepper: ^0.0.2
   async: ^2.4.2
-  flutter_easyloading: ^2.1.3
-  cached_network_image: ^2.3.3
-  flutter_circular_chart: ^0.1.0
-  intl: ^0.16.1
-  flutter_rating_bar: ^3.2.0+1
-  toggle_switch: ^0.1.8
-  flutter_slidable: ^0.5.7
-  get_storage: ^1.3.2
+  flutter_easyloading: ^3.0.5
+  cached_network_image: ^3.3.0
+  ## Dart 3 incompatible
+  #flutter_circular_chart: ^0.1.0
+  circular_chart_flutter: 0.0.2
+  intl: 0.18.1
+  flutter_rating_bar: 4.0.1
+  toggle_switch: ^2.1.0
+  flutter_slidable: 3.0.0
+  get_storage: 2.1.1
   get:
 
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.3.1
-  mobx_codegen: ^0.3.11
-  flutter_launcher_icons: ^0.7.0
+  build_runner: ^2.4.6
+  mobx_codegen: ^2.4.0
+  flutter_launcher_icons: ^0.13.1
  
 flutter:
   assets:
