--- a/src/MobileApp/android/app/build.gradle
+++ b/src/MobileApp/android/app/build.gradle
@@ -40,7 +40,8 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.CSoft.ReachUp"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 33
+        ndkVersion "25.1.8937393"
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
