--- a/src/MobileApp/gradle/wrapper/gradle-wrapper.properties
+++ b/src/MobileApp/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
+#Mon Oct 30 13:34:02 BRT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.3-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
