--- a/src/MobileApp/android/app/src/main/AndroidManifest.xml
+++ b/src/MobileApp/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/> 
     <application
-        android:name="${applicationName}"
+        android:name="com.CSoft.ReachUp"
         android:label="ReachUp"
         android:icon="@mipmap/ic_launcher">
         <activity
