--- a/src/MobileApp/android/build.gradle
+++ b/src/MobileApp/android/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -13,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
