--- a/src/MobileApp/android/app/src/main/AndroidManifest.xml
+++ b/src/MobileApp/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/> 
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="${applicationName}"
         android:label="ReachUp"
         android:icon="@mipmap/ic_launcher" 
         android:exported="true"
