--- a/src/MobileApp/pubspec.yaml
+++ b/src/MobileApp/pubspec.yaml
@@ -3,57 +3,52 @@ description: Mobile application for indoor location, provides blind and visually
 
 publish_to: 'none' 
 
-version: 1.0.6+6
+version: 1.0.7+7
 
 environment:
-  sdk: "2.12.0"
+  sdk: "2.19.6"
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^3.0.8
-  mobx: ^0.4.0
-  flutter_mobx: ^0.3.4
-  provider: ^4.0.1
-  font_awesome_flutter: ^8.8.1
-  flutter_beacon: ^0.3.0
+  dio: 4.0.1
+  mobx: ^2.3.0+1
+  flutter_mobx: ^2.2.0+2
+  provider: ^6.1.1
+  font_awesome_flutter: ^9.2.0
+  flutter_beacon: ^0.5.1
 
-  photo_view: 0.4.2
-  path_provider_windows: 0.0.4 
-  flutter_tts: ^0.8.6
-  sensors: ^0.4.2+5
-  flutter_compass: ^0.4.3
-  gesture_x_detector: 0.0.4
+  photo_view: ^0.14.0
+  path_provider_windows: ^2.2.1 
+  flutter_tts: ^3.8.5
+  sensors: ^2.0.3
+  flutter_compass: ^0.8.0
+  gesture_x_detector: ^1.1.1
 
-  lottie: ^0.6.0
+  lottie: ^2.3.2
 
-  cupertino_icons: ^0.1.3
-  http: ^0.12.0+2
-  giffy_dialog:
-  flutter_signin_button: ^1.1.0
-  fa_stepper: ^0.0.2
-  async: ^2.4.2
-  flutter_easyloading: ^2.1.3
-  cached_network_image: ^2.3.3
-  flutter_circular_chart:
-    git:
-      url: https://github.com/afandiyusuf/flutter_circular_chart.git
-      ref: develop
+  cupertino_icons: ^1.0.6
+  http: ^0.13.6
+  flutter_signin_button: ^2.0.0
+  async: ^2.10.0
+  flutter_easyloading: ^3.0.5
+  cached_network_image: ^3.2.3
 
-  intl: ^0.16.1
-  flutter_rating_bar: ^3.2.0+1
-  toggle_switch: ^0.1.8
-  flutter_slidable: ^0.5.7
-  get_storage: ^1.3.2
-  get:
+  intl: ^0.18.1
+  flutter_rating_bar: ^4.0.1
+  toggle_switch: ^2.1.0
+  flutter_slidable: ^3.0.1
+  get_storage: ^2.1.1
+  get: ^4.6.5
+  awesome_circular_chart: ^1.0.0
 
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.3.1
-  mobx_codegen: ^0.3.11
-  flutter_launcher_icons: ^0.7.0
+  build_runner: ^2.3.3
+  mobx_codegen: ^2.3.0
+  flutter_launcher_icons: ^0.13.1
  
 flutter:
   assets:
